--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,17 +1,17 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Listings</h1>
+<h1>Products</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Name english</th>
-      <th>Name spanish</th>
+      <th>Name English</th>
+      <th>Name Spanish</th>
       <th>String</th>
-      <th>Description english</th>
-      <th>Description spanish</th>
-      <th>Size english</th>
-      <th>Size spanish</th>
+      <th>Description English</th>
+      <th>Description Spanish</th>
+      <th>Size English</th>
+      <th>Size Spanish</th>
       <th>Weight</th>
       <th colspan="3"></th>
     </tr>
@@ -22,15 +22,14 @@
       <tr>
         <td><%= listing.name_english %></td>
         <td><%= listing.name_spanish %></td>
-        <td><%= listing.string %></td>
         <td><%= listing.description_english %></td>
         <td><%= listing.description_spanish %></td>
         <td><%= listing.size_english %></td>
         <td><%= listing.size_spanish %></td>
         <td><%= listing.weight %></td>
-        <td><%= link_to 'Show', listing %></td>
-        <td><%= link_to 'Edit', edit_listing_path(listing) %></td>
-        <td><%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', listing, class: "btn btn-link" %></td>
+        <td><%= link_to 'Edit', edit_listing_path(listing), class: "btn btn-link" %></td>
+        <td><%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-link" %></td>
       </tr>
     <% end %>
   </tbody>
@@ -38,4 +37,4 @@
 
 <br>
 
-<%= link_to 'New Listing', new_listing_path %>
+<%= link_to 'New Listing', new_listing_path, class: "btn btn-link" %>
