--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -11,11 +11,6 @@
 </p>
 
 <p>
-  <strong>String:</strong>
-  <%= @listing.string %>
-</p>
-
-<p>
   <strong>Description english:</strong>
   <%= @listing.description_english %>
 </p>
@@ -40,5 +35,5 @@
   <%= @listing.weight %>
 </p>
 
-<%= link_to 'Edit', edit_listing_path(@listing) %> |
-<%= link_to 'Back', listings_path %>
+<%= link_to 'Edit', edit_listing_path(@listing), class: "btn btn-link" %> |
+<%= link_to 'Back', listings_path, class: "btn btn-link" %>
