--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@listing) do |f| %>
+<%= form_for @listing, :html => { multipart => true }  do |f| %>
   <% if @listing.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@listing.errors.count, "error") %> prohibited this listing from being saved:</h2>
@@ -38,6 +38,9 @@
   <div class="form-group">
     <%= f.label :weight %><br>
     <%= f.number_field :weight %>
+  </div>
+  <div class="form-group">
+    <%= f.file_field :image, class: "form-control" %>
   </div>
   <div class="form-group">
     <%= f.submit class: "btn btn-primary" %>
