--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,40 +1,22 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Products</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Image</th>
-      <th>Name English</th>
-      <th>Name Spanish</th>
-      <th>String</th>
-      <th>Description English</th>
-      <th>Description Spanish</th>
-      <th>Size English</th>
-      <th>Size Spanish</th>
-      <th>Weight</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @listings.each do |listing| %>
-      <tr>
-        <td><%= listing.name_english %></td>
-        <td><%= listing.name_spanish %></td>
-        <td><%= listing.description_english %></td>
-        <td><%= listing.description_spanish %></td>
-        <td><%= listing.size_english %></td>
-        <td><%= listing.size_spanish %></td>
-        <td><%= listing.weight %></td>
-        <td><%= link_to 'Show', listing, class: "btn btn-link" %></td>
-        <td><%= link_to 'Edit', edit_listing_path(listing), class: "btn btn-link" %></td>
-        <td><%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-link" %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<div class="row">
+  <% @listings.each do |listing| %>
+    <div class="col-md-3">
+      <div class="thumbnail"> <%= image_tag listing.image.url %>
+        <div class="caption">
+          <h3><%= listing.name_english %></h3>
+          <h3><%= listing.name_spanish %></h3>
+          <p>weight: <%= listing.weight %> gm</p>
+          <%= link_to 'Show', listing, class: "btn btn-link" %>
+          <%= link_to 'Edit', edit_listing_path(listing), class: "btn btn-link" %>
+          <%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-link" %>
+        </div>
+      </div>
+    </div>
+  <% end %>
+</div>
 
 <br>
 
