--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,21 +1,22 @@
 <p id="notice"><%= notice %></p>
 
-
-<div class="row">
-  <% @listings.each do |listing| %>
-    <div class="col-md-3">
-      <div class="thumbnail"> <%= image_tag listing.image.url %>
-        <div class="caption">
-          <h3><%= listing.name_english %></h3>
-          <h3><%= listing.name_spanish %></h3>
-          <p>weight: <%= listing.weight %> gm</p>
-          <%= link_to 'Show', listing, class: "btn btn-link" %>
-          <%= link_to 'Edit', edit_listing_path(listing), class: "btn btn-link" %>
-          <%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-link" %>
+<div class="center">
+  <div class="row">
+    <% @listings.each do |listing| %>
+      <div class="col-md-3">
+        <div class="thumbnail"> <%= image_tag listing.image.url %>
+          <div class="caption">
+            <h3><%= listing.name_english %></h3>
+            <h3><%= listing.name_spanish %></h3>
+            <p>weight: <%= listing.weight %> gm</p>
+            <%= link_to 'Show', listing, class: "btn btn-link" %>
+            <%= link_to 'Edit', edit_listing_path(listing), class: "btn btn-link" %>
+            <%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-link" %>
+          </div>
         </div>
       </div>
-    </div>
-  <% end %>
+    <% end %>
+  </div>
 </div>
 
 <br>
