to fix form language

--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -17,23 +17,23 @@
     <%= f.text_field :name_english %>
   </div>
   <div class="form-group">
-    <%= f.label :name_spanish %><br>
+    <%= f.label "Nombre Español" %><br>
     <%= f.text_field :name_spanish %>
   </div>
   <div class="form-group">
-    <%= f.label :description_english %><br>
+    <%= f.label "English description" %><br>
     <%= f.text_area :description_english %>
   </div>
   <div class="form-group">
-    <%= f.label :description_spanish %><br>
+    <%= f.label "Descripción Español" %><br>
     <%= f.text_area :description_spanish %>
   </div>
   <div class="form-group">
-    <%= f.label :size_english %><br>
+    <%= f.label "English size" %><br>
     <%= f.text_field :size_english %>
   </div>
   <div class="form-group">
-    <%= f.label :size_spanish %><br>
+    <%= f.label "Tamaño Español" %><br>
     <%= f.text_field :size_spanish %>
   </div>
   <div class="form-group">
