to add Figaro gem

--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -12,6 +12,7 @@
     <p><%= @listing.description_english %></p>
     <p><%= @listing.description_spanish %></p>
     <p>Weight: <%= @listing.weight %> gm</p>
+    <p>Product code: <%= @listing.id %></p>
   </div>
 </div>
 
