--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -9,7 +9,8 @@
           <div class="caption">
             <h3><%= listing.name_english %></h3>
             <h3><%= listing.name_spanish %></h3>
-            <p>weight: <%= listing.weight %> gm</p>
+            <p>Product code: <%= listing.id %></p>
+
             <%= link_to 'Show', listing, class: "btn btn-link" %>
             <%= link_to 'Edit', edit_listing_path(listing), class: "btn btn-link" %>
             <%#= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-link" %>
