to customeise Devise forms

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,9 +1,9 @@
 <br>
 
 <!-- Ruby method to get current year-->
-<!-- <p>© Stephan Musgrave <%#= Time.now.year %></p> -->
+<p>© Ratna Musgrave <%= Time.now.year %></p>
 
 <!-- JavaScript method to get current year: needs manual page refresh-->
-<p>© Ratna Musgrave
-  <span id="current_year"></span>
-</p>
+<!-- <p>© Ratna Musgrave -->
+<!-- <span id="current_year"></span> -->
+<!-- </p> -->
