--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,7 +9,7 @@
   </div>
 
   <div class="form-group">
-    <%= f.label :first_name %>
+    <%= f.label :last_name %>
     <%= f.text_field :last_name, class: "form-control" %>
   </div>
 
