--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -2,18 +2,16 @@
 
 <div class="center">
   <div class="row">
-    <% @listings.each do |listing| %>
+    <% @listings.shuffle.each do |listing| %>
       <div class="col-md-3">
         <div class="thumbnail">
           <%= image_tag listing.image.url %>
           <div class="caption">
             <h3><%= listing.name_english %></h3>
-            <h3><%= listing.name_spanish %></h3>
+            <!-- <h3><%#= listing.name_spanish %></h3> -->
             <p>Product code: <%= listing.id %></p>
 
             <%= link_to 'Show', listing, class: "btn btn-link" %>
-            <%= link_to 'Edit', edit_listing_path(listing), class: "btn btn-link" %>
-            <%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-link" %>
           </div>
         </div>
       </div>
