--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -16,5 +16,7 @@
   </div>
 </div>
 
+<%= link_to 'Destroy', @listing, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-link" %>
+
 <%= link_to 'Edit', edit_listing_path(@listing), class: "btn btn-link" %> |
 <%= link_to 'Back', listings_path, class: "btn btn-link" %>
