--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,8 +21,20 @@
 
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
-          <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
-          <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.first_name %> <span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li>
+              <%= link_to edit_user_registration_path do %>
+                <i class="glyphicon glyphicon-wrench"></i>&nbsp;&nbsp;<%= t('navbar.edit_profile') %><br>
+              <% end %>
+              <%= link_to destroy_user_session_path, method: :delete do %>
+                <i class="glyphicon glyphicon-log-out"></i>&nbsp;&nbsp;<%= t('navbar.sign_out') %><br>
+              <% end %>
+            </ul>
+          </li>
+
+
         <% else %>
           <li><%= link_to "Sign Up", new_user_registration_path %></li>
           <li><%= link_to "Sign In", new_user_session_path %></li>
