--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -15,27 +15,27 @@
 
   <div class="form-group">
     <%= f.label "English name" %><br>
-    <%= f.text_field :name_english %>
+    <%= f.text_field :name_english, class: "form-control" %>
   </div>
   <div class="form-group">
     <%= f.label "Nombre Español" %><br>
-    <%= f.text_field :name_spanish %>
+    <%= f.text_field :name_spanish, class: "form-control" %>
   </div>
   <div class="form-group">
     <%= f.label "English description" %><br>
-    <%= f.text_area :description_english %>
+    <%= f.text_area :description_english, class: "form-control" %>
   </div>
   <div class="form-group">
     <%= f.label "Descripción Español" %><br>
-    <%= f.text_area :description_spanish %>
+    <%= f.text_area :description_spanish, class: "form-control" %>
   </div>
   <div class="form-group">
     <%= f.label "English size" %><br>
-    <%= f.text_field :size_english %>
+    <%= f.text_field :size_english, class: "form-control" %>
   </div>
   <div class="form-group">
     <%= f.label "Tamaño Español" %><br>
-    <%= f.text_field :size_spanish %>
+    <%= f.text_field :size_spanish, class: "form-control" %>
   </div>
   <div class="form-group">
     <%= f.label :weight %><br>
