--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -13,10 +13,10 @@
     <p><%= @listing.description_spanish %></p>
     <p>Weight: <%= @listing.weight %> gm</p>
     <p>Product code: <%= @listing.id %></p>
-  <%= link_to 'Edit', edit_listing_path(@listing), class: "btn btn-success" %>
-  <br>
-  <br>
-  <%= link_to 'Delete', @listing, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
+    <%= link_to 'Edit Product', edit_listing_path(@listing), class: "btn btn-success" %>
+    <br>
+    <br>
+    <%= link_to 'Delete Product', @listing, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
   </div>
 </div>
 
