--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -38,13 +38,25 @@
     <%= f.text_field :size_spanish, class: "form-control" %>
   </div>
   <div class="form-group">
-    <%= f.label :weight %><br>
+    <%= f.label "Weight (g)" %><br>
     <%= f.number_field :weight %>
+  </div>
+  <div class="form-group">
+    <%= f.label "Price €" %><br>
+    <%= f.number_field :price_euro %>
+  </div>
+  <div class="form-group £">
+    <%= f.label "Price £" %><br>
+    <%= f.number_field :price_gbp %>
+  </div>
+  <div class="form-group">
+    <%= f.label "Price $" %><br>
+    <%= f.number_field :price_dollar %>
   </div>
   <div class="form-group">
     <%= f.file_field :image, class: "form-control" %>
   </div>
   <div class="form-group">
-    <%= f.submit class: "btn btn-primary" %>
+    <%= f.submit "Save Product", class: "btn btn-success" %>
   </div>
 <% end %>
