to format prices

--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -42,15 +42,15 @@
     <%= f.number_field :weight %>
   </div>
   <div class="form-group">
-    <%= f.label "Price €" %><br>
+    <%= f.label "Price € (cents)" %><br>
     <%= f.number_field :price_euro %>
   </div>
   <div class="form-group £">
-    <%= f.label "Price £" %><br>
+    <%= f.label "Price £ (pence)" %><br>
     <%= f.number_field :price_gbp %>
   </div>
   <div class="form-group">
-    <%= f.label "Price $" %><br>
+    <%= f.label "Price $ (cents)" %><br>
     <%= f.number_field :price_dollar %>
   </div>
   <div class="form-group">
