--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -39,19 +39,7 @@
   </div>
   <div class="form-group">
     <%= f.label "Weight (g)" %><br>
-    <%= f.number_field :weight %>
-  </div>
-  <div class="form-group">
-    <%= f.label "Price € (cents)" %><br>
-    <%= f.number_field :price_euro %>
-  </div>
-  <div class="form-group £">
-    <%= f.label "Price £ (pence)" %><br>
-    <%= f.number_field :price_gbp %>
-  </div>
-  <div class="form-group">
-    <%= f.label "Price $ (cents)" %><br>
-    <%= f.number_field :price_dollar %>
+    <%= f.number_field :weight, required: true %>
   </div>
   <div class="form-group">
     <%= f.file_field :image, class: "form-control" %>
