--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -7,9 +7,9 @@
         <div class="thumbnail">
           <%= image_tag listing.image.url %>
           <div class="caption">
-            <h3><%= listing.name_english %>&nbsp&nbsp<%= number_to_currency((listing.price_euro / 100.0), unit: "€" ) %></h3>
+            <!-- <h3><%#= listing.name_english %>&nbsp&nbsp<%#= number_to_currency((listing.price_euro / 100.0), unit: "€" ) %></h3> -->
             <!-- <h3><%#= listing.name_spanish %></h3> -->
-            <p>Product code: <%= listing.id %></p>
+            <!-- <p>Product code: <%#= listing.id %></p> -->
 
             <%= link_to 'Show', listing, class: "btn btn-link" %>
           </div>
