--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -5,14 +5,17 @@
     <% @listings.shuffle.each do |listing| %>
       <div class="col-md-3">
         <div class="thumbnail">
-          <%= image_tag listing.image.url %>
-          <div class="caption">
+          <%#= image_tag listing.image.url %>
+          <%= link_to listing_path(listing) do %>
+              <%= image_tag listing.image.url%>
+          <% end %>
+          <!-- <div class="caption"> -->
             <!-- <h3><%#= listing.name_english %>&nbsp&nbsp<%#= number_to_currency((listing.price_euro / 100.0), unit: "€" ) %></h3> -->
             <!-- <h3><%#= listing.name_spanish %></h3> -->
             <!-- <p>Product code: <%#= listing.id %></p> -->
 
-            <%= link_to 'Show', listing, class: "btn btn-link" %>
-          </div>
+            <%#= link_to 'Show', listing, class: "btn btn-link" %>
+          <!-- </div> -->
         </div>
       </div>
     <% end %>
