--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,8 +15,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><%= link_to t('navbar.about'), pages_about_path %></li>
-        <li><%= link_to t('navbar.contact'), pages_contact_path %></li>
+        <li><%= link_to "About", pages_about_path %></li>
+        <li><%= link_to "Contact us", pages_contact_path %></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
@@ -26,10 +26,10 @@
             <ul class="dropdown-menu" role="menu">
               <li>
               <%= link_to edit_user_registration_path do %>
-                <i class="glyphicon glyphicon-wrench"></i>&nbsp;&nbsp;<%= t('navbar.edit_profile') %><br>
+                <i class="glyphicon glyphicon-wrench"></i>&nbsp;&nbsp;Edit profile<br>
               <% end %>
               <%= link_to destroy_user_session_path, method: :delete do %>
-                <i class="glyphicon glyphicon-log-out"></i>&nbsp;&nbsp;<%= t('navbar.sign_out') %><br>
+                <i class="glyphicon glyphicon-log-out"></i>&nbsp;&nbsp;Sign out<br>
               <% end %>
             </ul>
           </li>
