--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -24,6 +24,9 @@
 
 <br>
 
-<%= link_to 'New Product', new_listing_path, class: "btn btn-link" %>
+
+<% if !current_user.nil? && current_user.has_manager %>
+  <%= link_to 'New Product', new_listing_path, class: "btn btn-link" %>
+<% end %>
 
 
