--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -26,7 +26,7 @@
 
 
 <% if !current_user.nil? && current_user.has_manager %>
-  <%= link_to 'New Product', new_listing_path, class: "btn btn-link" %>
+  <%= link_to 'New Product', new_listing_path, class: "btn btn-success" %>
 <% end %>
 
 
