--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -29,4 +29,4 @@
 </div>
 
 
-<%= link_to 'Back', listings_path, class: "btn btn-link" %>
+<%= link_to 'Back', listings_path, class: "btn btn-primary" %>
