--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -44,7 +44,20 @@
   <div class="form-group">
     <%= f.file_field :image, class: "form-control" %>
   </div>
+
+  <% if @listing.new_record? %>
+    <div class="form-group">
+      <%= f.fields_for :image_containers do |x| %>
+        <%= x.label :picture, "Picture *", class: 'primary-color' %>
+        <%= x.file_field :picture, class: 'form-control' %>
+      <% end %>
+    </div>
+  <% end %>
+
+
+
   <div class="form-group">
     <%= f.submit "Save Product", class: "btn btn-success" %>
   </div>
 <% end %>
+
