--- a/app/views/listings/_form2.html.erb
+++ b/app/views/listings/_form2.html.erb
@@ -45,8 +45,18 @@
     <%= f.file_field :image, class: "form-control" %>
   </div>
 
+  <%# if @listing.new_record? %>
+    <div class="form-group">
+      <%= f.fields_for :image_containers do |x| %>
+        <%= x.label :picture, "Picture *", class: 'primary-color' %>
+        <%= file_field_tag "images[]", type: :file, multiple: true %>
+        <%= x.file_field :picture, class: 'form-control' %>
+      <% end %>
+    </div>
+  <%# end %>
+
+
   <div class="form-group">
     <%= f.submit "Save Product", class: "btn btn-success" %>
   </div>
 <% end %>
-
