--- a/app/views/listings/_form2.html.erb
+++ b/app/views/listings/_form2.html.erb
@@ -1,62 +1,42 @@
+
+
 <%= form_for @listing, :html => { :multipart => true }  do |f| %>
 
-  <% if @listing.errors.any? %>
-    <div id="error_explanation" class="alert alert-danger alert-dismissable" >
-      <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-      <h4><%= pluralize(@listing.errors.count, "error") %> prohibited this listing from being saved</h4>
-
-      <ul>
-      <% @listing.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+  <div class="control-group">
+    <%= f.label :name, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :name_english, :class => 'text_field' %>
     </div>
-  <% end %>
+  </div>
 
-  <div class="form-group">
-    <%= f.label "English name" %><br>
-    <%= f.text_field :name_english, required: true, class: "form-control" %>
-  </div>
-  <div class="form-group">
-    <%= f.label "Nombre Español" %><br>
-    <%= f.text_field :name_spanish, class: "form-control" %>
-  </div>
-  <div class="form-group">
-    <%= f.label "English description" %><br>
-    <%= f.text_area :description_english, class: "form-control" %>
-  </div>
-  <div class="form-group">
-    <%= f.label "Descripción Español" %><br>
-    <%= f.text_area :description_spanish, class: "form-control" %>
-  </div>
-  <div class="form-group">
-    <%= f.label "English size" %><br>
-    <%= f.text_field :size_english, class: "form-control" %>
-  </div>
-  <div class="form-group">
-    <%= f.label "Tamaño Español" %><br>
-    <%= f.text_field :size_spanish, class: "form-control" %>
-  </div>
   <div class="form-group">
     <%= f.label "Weight (g)" %><br>
     <%= f.number_field :weight, required: true %>
   </div>
+
   <div class="form-group">
     <%= f.file_field :image, class: "form-control" %>
   </div>
 
-  <%# if @listing.new_record? %>
-    <div class="form-group">
-      <%= f.fields_for :image_containers do |x| %>
-        <%= x.label :picture, "Picture *", class: 'primary-color' %>
-        <%= file_field_tag "images[]", type: :file, multiple: true %>
-        <%= x.file_field :picture, class: 'form-control' %>
-      <% end %>
+  <div class="control-group">
+    <%= f.label :pictures %>
+    <div class="controls">
+      <%= file_field_tag "pictures[]", type: :file, multiple: true %>
     </div>
-  <%# end %>
+  </div>
 
+  <!-- <div class="form-group"> -->
+    <%#= f.fields_for :image_containers do |x| %>
+      <%#= x.label :picture, "Picture *", class: 'primary-color' %>
+      <%#= x.file_field :picture, class: 'form-control' %>
+    <%# end %>
+  <!-- </div> -->
 
-  <div class="form-group">
-    <%= f.submit "Save Product", class: "btn btn-success" %>
+  <div class="form-actions">
+    <%= f.submit "Save Product", class:'btn btn-success' %>
   </div>
 <% end %>
+
+
+<!-- http://www.railscook.com/recipes/multiple-files-upload-with-nested-resource-using-paperclip-in-rails/ -->
+
