--- a/app/views/listings/_form2.html.erb
+++ b/app/views/listings/_form2.html.erb
@@ -2,36 +2,48 @@
 
 <%= form_for @listing, :html => { :multipart => true }  do |f| %>
 
-  <div class="control-group">
-    <%= f.label :name, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :name_english, :class => 'text_field' %>
-    </div>
+  <div class="form-group">
+    <%= f.label "English name" %><br>
+    <%= f.text_field :name_english, required: true, class: "form-control" %>
   </div>
+  <div class="form-group">
+    <%= f.label "Nombre Español" %><br>
+    <%= f.text_field :name_spanish, class: "form-control" %>
+  </div>
+  <div class="form-group">
+    <%= f.label "English description" %><br>
+    <%= f.text_area :description_english, class: "form-control" %>
+  </div>
+  <div class="form-group">
+    <%= f.label "Descripción Español" %><br>
+    <%= f.text_area :description_spanish, class: "form-control" %>
+  </div>
+  <div class="form-group">
+    <%= f.label "English size" %><br>
+    <%= f.text_field :size_english, class: "form-control" %>
+  </div>
+  <div class="form-group">
+    <%= f.label "Tamaño Español" %><br>
+    <%= f.text_field :size_spanish, class: "form-control" %>
+  </div>
+  <div class="form-group">
+
 
   <div class="form-group">
-    <%= f.label "Weight (g)" %><br>
+    <%= f.label "Weight (g):" %><br>
     <%= f.number_field :weight, required: true %>
   </div>
 
   <div class="form-group">
+    <%= f.label "Main Picture:" %>
     <%= f.file_field :image, class: "form-control" %>
   </div>
 
-  <div class="control-group">
-    <%= f.label :pictures %>
-    <div class="controls">
-      <%= file_field_tag "pictures[]", type: :file, multiple: true %>
-    </div>
+  <div class="form-group">
+    <%= f.label "Extra pictures:" %>
+    <%= file_field_tag "pictures[]", type: :file, multiple: true, class: "form-control" %>
   </div>
-
-  <!-- <div class="form-group"> -->
-    <%#= f.fields_for :image_containers do |x| %>
-      <%#= x.label :picture, "Picture *", class: 'primary-color' %>
-      <%#= x.file_field :picture, class: 'form-control' %>
-    <%# end %>
-  <!-- </div> -->
-
+  <br>
   <div class="form-actions">
     <%= f.submit "Save Product", class:'btn btn-success' %>
   </div>
