--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing Product</h1>
 
-<%= render 'form' %>
+<%= render 'form2' %>
 
 <%= link_to 'Show', @listing, class: "btn btn-link" %> |
 <%= link_to 'Back', listings_path, class: "btn btn-link" %>
