--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -39,7 +39,7 @@
   </div>
   <div class="form-group">
     <%= f.label "Weight (g)" %><br>
-    <%= f.number_field :weight, required: true %>
+    <%= f.number_field :weight %>
   </div>
   <div class="form-group">
     <%= f.file_field :image, class: "form-control" %>
