--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -2,12 +2,12 @@
 
 <div class="center">
   <div class="row">
-    <% @listings.each do |listing| %>
-      <div class="col-md-3">
+    <% @listings_per_page.each do |listing| %>
+      <div class="col-md-2">
         <div class="thumbnail">
           <%#= image_tag listing.image.url %>
           <%= link_to listing_path(listing) do %>
-              <%= image_tag listing.image.url%>
+              <%= image_tag listing.image.url(:medium)%>
           <% end %>
           <!-- <div class="caption"> -->
             <!-- <h3><%#= listing.name_english %>&nbsp&nbsp<%#= number_to_currency((listing.price_euro / 100.0), unit: "€" ) %></h3> -->
@@ -23,7 +23,7 @@
 </div>
 
 <br>
-<%= will_paginate @listings, :previous_label => ' < ', :next_label => ' > ', renderer: BootstrapPagination::Rails %>
+<%= will_paginate @listings_per_page, :previous_label => ' < ', :next_label => ' > ', renderer: BootstrapPagination::Rails %>
 <br>
 
 
