to add category_id to the Listing model

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,12 +1,12 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Name english:</strong>
+  <strong>Name:</strong>
   <%= @category.name_english %>
 </p>
 
 <p>
-  <strong>Name spanish:</strong>
+  <strong>Nombre:</strong>
   <%= @category.name_spanish %>
 </p>
 
