--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -5,8 +5,8 @@
 <table>
   <thead>
     <tr>
-      <th>Name english</th>
-      <th>Name spanish</th>
+      <th>English Name</th>
+      <th>Spanish Name</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -26,4 +26,6 @@
 
 <br>
 
-<%= link_to 'New Category', new_category_path %>
+<% if !current_user.nil? && current_user.has_manager  %>
+  <%= link_to 'New Category', new_category_path, class:"btn btn-link", data: { no_turbolink: true }  %>
+<% end %>
