--- a/app/views/listings/_form2.html.erb
+++ b/app/views/listings/_form2.html.erb
@@ -3,6 +3,10 @@
 <%= form_for @listing, :html => { :multipart => true }  do |f| %>
 
   <div class="form-group">
+    <%= f.label :category_id %>
+    <%= f.collection_select :category_id, Category.all, :id, :name_english, {prompt: "Choose a category"}, {class: "btn btn-default dropdown-toggle"} %>
+  </div>
+  <div class="form-group">
     <%= f.label "English name" %><br>
     <%= f.text_field :name_english, required: true, class: "form-control" %>
   </div>
