--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,9 +17,9 @@
       <ul class="nav navbar-nav">
         <li><%= link_to "About", pages_about_path %></li>
         <li><%= link_to "Contact us", pages_contact_path %></li>
-        <li>&nbsp</li>
+        <li>&nbsp&nbsp&nbsp</li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Browse<b class="caret"></b></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Products<b class="caret"></b></a>
           <ul class="dropdown-menu" role="menu">
             <% Category.all.each do |category| %>
               <li><%= link_to category.name_english, listings_path(category: category.name_english) %></li>
