--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -4,19 +4,11 @@
   <h1><%= @title %> </h1><br>
   <div class="row">
     <% @listings.each do |listing| %>
-      <div class="col-md-2">
+      <div class="col-xs-6 col-sm-4 col-md-2">
         <div class="thumbnail">
-          <%#= image_tag listing.image.url %>
           <%= link_to listing_path(listing) do %>
               <%= image_tag listing.image.url(:medium)%>
           <% end %>
-          <!-- <div class="caption"> -->
-            <!-- <h3><%#= listing.name_english %>&nbsp&nbsp<%#= number_to_currency((listing.price_euro / 100.0), unit: "€" ) %></h3> -->
-            <!-- <h3><%#= listing.name_spanish %></h3> -->
-            <!-- <p>Product code: <%#= listing.id %></p> -->
-
-            <%#= link_to 'Show', listing, class: "btn btn-link" %>
-          <!-- </div> -->
         </div>
       </div>
     <% end %>
