--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -4,6 +4,7 @@
   <h1><%= @title %> </h1><br>
   <div class="row">
     <% @listings.each do |listing| %>
+      <!-- colums:    2        3        6      -->
       <div class="col-xs-6 col-sm-4 col-md-2">
         <div class="thumbnail">
           <%= link_to listing_path(listing) do %>
