--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -5,10 +5,10 @@
   <div class="row">
     <% @listings.each do |listing| %>
       <!-- colums:    2        3        6      -->
-      <div class="col-xs-6 col-sm-4 col-md-2">
+      <div class="col-xs-6 col-sm-4 col-md-3">
         <div class="thumbnail">
           <%= link_to listing_path(listing) do %>
-              <%= image_tag listing.image.url(:medium)%>
+              <%= image_tag listing.image.url(:medium), width: '100%' %>
           <% end %>
         </div>
       </div>
