--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -2,17 +2,19 @@
 
 <div class="center">
   <h1><%= @title %> </h1><br>
-  <div class="row">
-    <% @listings.each do |listing| %>
-      <!-- colums:    2        3        6      -->
-      <div class="col-xs-6 col-sm-4 col-md-3">
-        <div class="thumbnail">
-          <%= link_to listing_path(listing) do %>
-              <%= image_tag listing.image.url(:medium), width: '100%' %>
-          <% end %>
+  <div class="container-fluid">
+    <div class="row">
+      <% @listings.each do |listing| %>
+        <!-- colums:    2        3        6      -->
+        <div class="col-xs-6 col-sm-4 col-md-4">
+          <div class="thumbnail">
+            <%= link_to listing_path(listing) do %>
+                <%= image_tag listing.image.url(:medium), width: '100%' %>
+            <% end %>
+          </div>
         </div>
-      </div>
-    <% end %>
+      <% end %>
+    </div>
   </div>
 </div>
 
