--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -5,8 +5,8 @@
   <div class="container-fluid">
     <div class="row">
       <% @listings.each do |listing| %>
-        <!-- colums:    2        3        6      -->
-        <div class="col-xs-6 col-sm-4 col-md-4">
+        <!-- colums:    2        3        4        4  -->
+        <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
           <div class="thumbnail">
             <%= link_to listing_path(listing) do %>
                 <%= image_tag listing.image.url(:medium), width: '100%' %>
